--- a/index.css
+++ b/index.css
@@ -1,3 +1,7 @@
 body {
-     background: linear-gradient(#ff6060,#2c41a0)
+    background-image: linear-gradient(to right, #2c3e50 50%, #bdc3c7 50%);
+    background-attachment: fixed;
+    margin: 0;
+    padding: 0;
+    min-height: 100vh;
 }
