--- a/index.css
+++ b/index.css
@@ -1,6 +1,5 @@
 body {
-    background-image: linear-gradient(to right, #2c3e50 50%, #bdc3c7 50%);
-    background-attachment: fixed;
+    background-image: linear-gradient( #2c3e50, #bdc3c7);
     margin: 0;
     padding: 0;
     min-height: 100vh;
