--- a/index.css
+++ b/index.css
@@ -1,6 +1,3 @@
 body {
-    background-image: linear-gradient( #2c3e50, #bdc3c7);
-    margin: 0;
-    padding: 0;
-    min-height: 100vh;
+    background-blend-mode: ( #2c3e50, #bdc3c7);
 }
